@@ -1,10 +1,10 @@
 {
    "abstract" : "Skip test in a declarative way, following the Lancaster Consensus",
    "author" : [
-      "Olivier Mengu\u00c3\u00a9 <dolmen@cpan.org>"
+      "Olivier Mengue <dolmen@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "perl_5"
    ],
@@ -50,6 +50,6 @@
          "web" : "https://github.com/dolmen/p5-Test-Is"
       }
    },
-   "version" : "20130414.1"
+   "version" : "20130423"
 }
 
