@@ -1,13 +1,13 @@
 ---
 abstract: 'Skip test in a declarative way, following the Lancaster Consensus'
 author:
-  - 'Olivier Mengué <dolmen@cpan.org>'
+  - 'Olivier Mengue <dolmen@cpan.org>'
 build_requires:
   Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,4 +19,4 @@ requires:
 resources:
   homepage: https://github.com/dolmen/p5-Test-Is
   repository: https://github.com/dolmen/p5-Test-Is.git
-version: 20130414.1
+version: 20130423
