@@ -1,10 +1,10 @@
 name    = Test-Is
-author  = Olivier Mengué <dolmen@cpan.org>
+author  = Olivier Mengue <dolmen@cpan.org>
 license = Perl_5
-copyright_holder = Olivier Mengué
+copyright_holder = Olivier Mengue
 copyright_year   = 2013
 
-version = 20130414.1
+version = 20130423
 
 ; From @Basic:
 [GatherDir]
