@@ -1,5 +1,11 @@
 Revision history for Test-Is.
 
+20130423     2013-04-23    DOLMEN (Olivier Mengué)
+	Fix environment variable name (NON_INTERACTIVE =>
+          NONINTERACTIVE_TESTING) now that the final spec of the Lancaster has
+	  been published.
+	POD: add links to the spec.
+
 20130414.1    2013-04-19    DOLMEN (Olivier Mengué)
 	Fix t/simulation.t for perl < 5.14
 
